--- a/microservices/product-composite-service/Dockerfile
+++ b/microservices/product-composite-service/Dockerfile
@@ -5,11 +5,14 @@ RUN java -Djarmode=layertools -jar app.jar extract
 
 FROM adoptopenjdk:11
 WORKDIR application
+
 COPY --from=builder extracted/dependencies/ ./
 COPY --from=builder extracted/spring-boot-loader/ ./
 COPY --from=builder extracted/snapshot-dependencies/ ./
 COPY --from=builder extracted/application/ ./
 
 EXPOSE 8080
+
+ENV JAVA_TOOL_OPTIONS -agentlib:jdwp=transport=dt_socket,address=*:5005,server=y,suspend=n
 
 ENTRYPOINT ["java", "org.springframework.boot.loader.JarLauncher"]
