--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,27 +3,77 @@ version: '2.1'
 services:
 
   product: # the name of the microservice. This will also be the hostname of the container in the internal Docker network.
+    container_name: product
     build: microservices/product-service
     mem_limit: 512m
+    ports:
+    - "5006:5006" # remote debug port
     environment:
       - SPRING_PROFILES_ACTIVE=docker
+    depends_on:
+      mongodb:
+        condition: service_healthy
 
   recommendation:
+    container_name: recommendation
     build: microservices/recommendation-service
     mem_limit: 512m
+    ports:
+      - "5007:5007"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
+    depends_on:
+      mongodb:
+        condition: service_healthy
 
   review:
+    container_name: review
     build: microservices/review-service
     mem_limit: 512m
+    ports:
+    - "5008:5008"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
+    depends_on:
+      mysql:
+        condition: service_healthy
 
   product-composite:
+    container_name: product-composite
     build: microservices/product-composite-service
     mem_limit: 512m
     ports:
       - "8080:8080" # because we want to reach the container outside Docker.
+      - "5005:5005"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
+
+  mongodb:
+    container_name: mongodb
+    image: mongo:4.4.2
+    mem_limit: 512m
+    ports:
+      - "27017:27017"
+    command: mongod
+    healthcheck:
+      test: "mongo --eval 'db.stats().ok'"
+      interval: 5s
+      timeout: 2s
+      retries: 60
+
+  mysql:
+    container_name: mysql
+    image: mysql:5.7.32
+    mem_limit: 512m
+    ports:
+      - "3306:3306"
+    environment:
+      - MYSQL_ROOT_PASSWORD=rootpwd
+      - MYSQL_DATABASE=review-db
+      - MYSQL_USER=user
+      - MYSQL_PASSWORD=pwd
+    healthcheck:
+      test: "/usr/bin/mysql --user=user --password=pwd --execute \"SHOW DATABASES;\""
+      interval: 5s
+      timeout: 2s
+      retries: 60
