--- a/api/pom.xml
+++ b/api/pom.xml
@@ -36,6 +36,14 @@
 			<artifactId>reactor-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-common -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-common</artifactId>
+			<version>1.5.9</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
