Create docker compose for kafka. closes #39

--- a/docker-compose-partitions.yml
+++ b/docker-compose-partitions.yml
@@ -2,14 +2,24 @@ version: '2.1'
 
 services:
 
-  product: # the name of the microservice. This will also be the hostname of the container in the internal Docker network.
+  product:
     container_name: product
     build: microservices/product-service
     mem_limit: 512m
-    ports:
-    - "5006:5006" # remote debug port
     environment:
-      - SPRING_PROFILES_ACTIVE=docker
+      - SPRING_PROFILES_ACTIVE=docker,streaming_partitioned,streaming_instance_0
+    depends_on:
+      mongodb:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+
+  product-p1:
+    container_name: product-p1
+    build: microservices/product-service
+    mem_limit: 512m
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker,streaming_partitioned,streaming_instance_1
     depends_on:
       mongodb:
         condition: service_healthy
@@ -20,10 +30,20 @@ services:
     container_name: recommendation
     build: microservices/recommendation-service
     mem_limit: 512m
-    ports:
-      - "5007:5007" # remote debug port
     environment:
-      - SPRING_PROFILES_ACTIVE=docker
+      - SPRING_PROFILES_ACTIVE=docker,streaming_partitioned,streaming_instance_0
+    depends_on:
+      mongodb:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+
+  recommendation-p1:
+    container_name: recommendation-p1
+    build: microservices/recommendation-service
+    mem_limit: 512m
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker,streaming_partitioned,streaming_instance_1
     depends_on:
       mongodb:
         condition: service_healthy
@@ -34,10 +54,20 @@ services:
     container_name: review
     build: microservices/review-service
     mem_limit: 512m
-    ports:
-    - "5008:5008" # remote debug port
     environment:
-      - SPRING_PROFILES_ACTIVE=docker
+      - SPRING_PROFILES_ACTIVE=docker,streaming_partitioned,streaming_instance_0
+    depends_on:
+      mysql:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+
+  review-p1:
+    container_name: review-p1
+    build: microservices/review-service
+    mem_limit: 512m
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker,streaming_partitioned,streaming_instance_1
     depends_on:
       mysql:
         condition: service_healthy
@@ -49,14 +79,12 @@ services:
     build: microservices/product-composite-service
     mem_limit: 512m
     ports:
-      - "8080:8080" # because we want to reach the container outside Docker.
-      - "5005:5005" # remote debug port
+      - "8080:8080"
     environment:
-      - SPRING_PROFILES_ACTIVE=docker
+      - SPRING_PROFILES_ACTIVE=docker,streaming_partitioned
     depends_on:
       rabbitmq:
         condition: service_healthy
-
 
   mongodb:
     container_name: mongodb
@@ -88,7 +116,6 @@ services:
       timeout: 2s
       retries: 60
 
-  # Use rabbitmq default
   rabbitmq:
     container_name: rabbitmq
     image: rabbitmq:3.8.11-management
