--- a/microservices/product-service/src/main/resources/application.yml
+++ b/microservices/product-service/src/main/resources/application.yml
@@ -1,6 +1,20 @@
 server.port: 7001
 server.error.include-message: always
 
+spring.application.name: product
+
+app.eureka-server: localhost
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://${app.eureka-server}:8761/eureka/
+    initialInstanceInfoReplicationIntervalSeconds: 5
+    registryFetchIntervalSeconds: 5
+  instance:
+    leaseRenewalIntervalInSeconds: 5
+    leaseExpirationDurationInSeconds: 5
+
 spring.data.mongodb:
   host: localhost
   port: 27017
@@ -45,10 +59,16 @@ logging:
     com.mkurt: DEBUG
     org.springframework.data.mongodb.core.MongoTemplate: DEBUG # allow us to see which MongoDB statements are executed in the log.
 
+management.endpoint.health.show-details: "ALWAYS"
+management.endpoints.web.exposure.include: "*"
 ---
 spring.config.activate.on-profile: docker
 
 server.port: 8080
+
+app.eureka-server: eureka
+
+# eureka.client.serviceUrl.defaultZone: http://${app.eureka-server}:8761/eureka/
 
 # When running inside Docker using the Spring profile, docker, the database is expected to be reachable on mongodb:27017.
 spring.data.mongodb.host: mongodb
