--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     container_name: product
     build: microservices/product-service
     mem_limit: 512m
-    ports:
-    - "5006:5006" # remote debug port
+#    ports:
+#    - "5006:5006" # remote debug port
     environment:
       - SPRING_PROFILES_ACTIVE=docker
     depends_on:
@@ -20,8 +20,8 @@ services:
     container_name: recommendation
     build: microservices/recommendation-service
     mem_limit: 512m
-    ports:
-      - "5007:5007" # remote debug port
+#    ports:
+#      - "5007:5007" # remote debug port
     environment:
       - SPRING_PROFILES_ACTIVE=docker
     depends_on:
@@ -33,9 +33,9 @@ services:
   review:
     container_name: review
     build: microservices/review-service
-    mem_limit: 512m
-    ports:
-    - "5008:5008" # remote debug port
+    mem_limit: 912m
+#    ports:
+#    - "5008:5008" # remote debug port
     environment:
       - SPRING_PROFILES_ACTIVE=docker
     depends_on:
@@ -56,7 +56,8 @@ services:
     depends_on:
       rabbitmq:
         condition: service_healthy
-
+      auth-server:
+        condition: service_healthy
 
   mongodb:
     container_name: mongodb
@@ -110,9 +111,24 @@ services:
 #      - "8761:8761" # we are reaching this via edge server only. so this port is not exposed.
 
   gateway:
+    container_name: gateway
     environment:
       - SPRING_PROFILES_ACTIVE=docker
     build: spring-cloud/gateway
     mem_limit: 512m
     ports:
-      - "8080:8080"
+      - "8443:8443"
+    depends_on:
+      auth-server:
+        condition: service_healthy
+
+  auth-server:
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    build: spring-cloud/authorization-server
+    mem_limit: 512m
+    healthcheck:
+      test: [ "CMD", "curl", "-fs", "http://localhost:9999/actuator/health" ]
+      interval: 5s
+      timeout: 2s
+      retries: 60
