--- a/spring-cloud/eureka-server/src/main/resources/application.yml
+++ b/spring-cloud/eureka-server/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 server:
   port: 8761
 
+app:
+  eureka-username: u
+  eureka-password: p
+
 eureka:
   instance:
     hostname: localhost
@@ -11,7 +15,7 @@ eureka:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
   # from: https://github.com/spring-cloud-samples/eureka/blob/master/src/main/resources/application.yml
   server:
-    waitTimeInMsWhenSyncEmpty: 0 # minimize the startup time
-    response-cache-update-interval-ms: 5000 # minimize the startup time
+    waitTimeInMsWhenSyncEmpty: 0 # minimize the startup time (for dev purposes)
+    response-cache-update-interval-ms: 5000 # minimize the startup time (for dev purposes)
 
 management.endpoints.web.exposure.include: "*"
