--- a/microservices/product-composite-service/src/main/resources/application.yml
+++ b/microservices/product-composite-service/src/main/resources/application.yml
@@ -3,6 +3,19 @@ springdoc:
   api-docs.path: /openapi/v3/api-docs
   packagesToScan: com.mkurt.productcompositeservice
   pathsToMatch: /**
+  cache.disabled: true
+
+  swagger-ui:
+    oauth2-redirect-url: https://localhost:8443/webjars/swagger-ui/oauth2-redirect.html # The redirect URL that Swagger UI will use to acquire the authorization code.
+    oauth:
+      clientId: writer # redirect client id
+      clientSecret: secret # redirect client secret
+      useBasicAuthenticationWithAccessCodeGrant: true
+  oAuthFlow:
+    authorizationUrl: https://localhost:8443/oauth2/authorize
+    tokenUrl: https://localhost:8443/oauth2/token
+
+server.forward-headers-strategy: framework # To enable the product-composite service to produce a correct server URL in the OpenAPI specification
 
 api:
   common:
@@ -66,12 +79,16 @@ server.error.include-message: always
 
 spring.application.name: product-composite
 
-app.eureka-server: localhost
+app:
+  eureka-username: u
+  eureka-password: p
+  eureka-server: localhost
+  auth-server: localhost
 
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://${app.eureka-server}:8761/eureka/
+      defaultZone: "http://${app.eureka-username}:${app.eureka-password}@${app.eureka-server}:8761/eureka/"
     initialInstanceInfoReplicationIntervalSeconds: 5
     registryFetchIntervalSeconds: 5
   instance:
@@ -105,6 +122,9 @@ spring.rabbitmq:
   username: guest
   password: guest
 
+# The authorization server's OIDC discovery endpoint has been registered here.
+spring.security.oauth2.resourceserver.jwt.issuer-uri: http://${app.auth-server}:9999
+
 logging:
   level:
     root: INFO
@@ -118,7 +138,9 @@ spring.config.activate.on-profile: docker
 
 server.port: 8080
 
-app.eureka-server: eureka
+app:
+  eureka-server: eureka
+  auth-server: auth-server
 
 spring.rabbitmq.host: rabbitmq
 spring.cloud.stream.kafka.binder.brokers: kafka
