--- a/microservices/product-composite-service/src/main/resources/application.yml
+++ b/microservices/product-composite-service/src/main/resources/application.yml
@@ -1,94 +1,14 @@
-springdoc:
-  swagger-ui.path: /openapi/swagger-ui.html
-  api-docs.path: /openapi/v3/api-docs
-  packagesToScan: com.mkurt.productcompositeservice
-  pathsToMatch: /**
-  cache.disabled: true
-
-  swagger-ui:
-    oauth2-redirect-url: https://localhost:8443/webjars/swagger-ui/oauth2-redirect.html # The redirect URL that Swagger UI will use to acquire the authorization code.
-    oauth:
-      clientId: writer # redirect client id
-      clientSecret: secret # redirect client secret
-      useBasicAuthenticationWithAccessCodeGrant: true
-  oAuthFlow:
-    authorizationUrl: https://localhost:8443/oauth2/authorize
-    tokenUrl: https://localhost:8443/oauth2/token
-
-server.forward-headers-strategy: framework # To enable the product-composite service to produce a correct server URL in the OpenAPI specification
-
-api:
-  common:
-    version: 1.0.0
-    title: Sample API
-    description: Description of the API...
-    termsOfService: MY TERMS OF SERVICE
-    license: MY LICENSE
-    licenseUrl: MY LICENSE URL
-
-    externalDocDesc: MY WIKI PAGE
-    externalDocUrl: MY WIKI URL
-    contact:
-      name: NAME OF CONTACT
-      url: URL TO CONTACT
-      email: contact@mail.com
-
-  responseCodes:
-    ok.description: OK
-    badRequest.description: Bad Request, invalid format of the request. See response message for more information
-    notFound.description: Not found, the specified id does not exist
-    unprocessableEntity.description: Unprocessable entity, input parameters caused the processing to fail. See response message for more information
-
-  product-composite:
-
-    get-composite-product:
-      description: Returns a composite view of the specified product id
-      notes: |
-        # Normal response
-        If the requested product id is found the method will return information regarding:
-        1. Product information
-        1. Reviews
-        1. Recommendations
-        1. Service Addresses\n(technical information regarding the addresses of the microservices that created the response)
-
-        # Expected partial and error responses
-        1. If no product information is found, a **404 - Not Found** error will be returned
-        1. In no recommendations or reviews are found for a product, a partial response will be returned
-
-    create-composite-product:
-      description: Creates a composite product
-      notes: |
-        # Normal response
-        The composite product information posted to the API will be split up and stored as separate product-info, recommendation and review entities.
-
-        # Expected error responses
-        1. If a product with the same productId as specified in the posted information already exists,
-           an **422 - Unprocessable Entity** error with a "duplicate key" error message will be returned
-
-    delete-composite-product:
-      description: Deletes a product composite
-      notes: |
-        # Normal response
-        Entities for product information, recommendations and reviews related to the specified productId will be deleted.
-        The implementation of the delete method is idempotent, i.e. it can be called several times with the same response.
-
-        This means that a delete request of a non-existing product will return **200 Ok**.
-
 server.port: 7000
 server.error.include-message: always
 
 spring.application.name: product-composite
 
-app:
-  eureka-username: u
-  eureka-password: p
-  eureka-server: localhost
-  auth-server: localhost
+app.eureka-server: localhost
 
 eureka:
   client:
     serviceUrl:
-      defaultZone: "http://${app.eureka-username}:${app.eureka-password}@${app.eureka-server}:8761/eureka/"
+      defaultZone: http://${app.eureka-server}:8761/eureka/
     initialInstanceInfoReplicationIntervalSeconds: 5
     registryFetchIntervalSeconds: 5
   instance:
@@ -122,9 +42,6 @@ spring.rabbitmq:
   username: guest
   password: guest
 
-# The authorization server's OIDC discovery endpoint has been registered here.
-spring.security.oauth2.resourceserver.jwt.issuer-uri: http://${app.auth-server}:9999
-
 logging:
   level:
     root: INFO
@@ -138,9 +55,7 @@ spring.config.activate.on-profile: docker
 
 server.port: 8080
 
-app:
-  eureka-server: eureka
-  auth-server: auth-server
+app.eureka-server: eureka
 
 spring.rabbitmq.host: rabbitmq
 spring.cloud.stream.kafka.binder.brokers: kafka
