--- a/docker-compose-kafka.yml
+++ b/docker-compose-kafka.yml
@@ -140,8 +140,8 @@ services:
   eureka:
     build: spring-cloud/eureka-server
     mem_limit: 512m
-#    ports:
-#      - "8761:8761"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
 
   gateway:
     environment:
@@ -150,6 +150,12 @@ services:
     mem_limit: 512m
     ports:
       - "8443:8443"
-    depends_on:
-      auth-server:
-        condition: service_healthy
+
+  config-server:
+    build: spring-cloud/config-server
+    mem_limit: 512m
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker,native
+      - ENCRYPT_KEY=${CONFIG_SERVER_ENCRYPT_KEY}
+    volumes:
+      - $PWD/config-repo:/config-repo
