--- a/docker-compose-partitions.yml
+++ b/docker-compose-partitions.yml
@@ -144,6 +144,12 @@ services:
     mem_limit: 512m
     ports:
       - "8443:8443"
-    depends_on:
-      auth-server:
-        condition: service_healthy
+
+  config-server:
+    build: spring-cloud/config-server
+    mem_limit: 512m
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker,native
+      - ENCRYPT_KEY=${CONFIG_SERVER_ENCRYPT_KEY}
+    volumes:
+      - $PWD/config-repo:/config-repo
