--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,8 +56,6 @@ services:
     depends_on:
       rabbitmq:
         condition: service_healthy
-      auth-server:
-        condition: service_healthy
 
   mongodb:
     container_name: mongodb
@@ -107,17 +105,25 @@ services:
     container_name: eureka
     build: spring-cloud/eureka-server
     mem_limit: 512m
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
 #    ports:
 #      - "8761:8761" # we are reaching this via edge server only. so this port is not exposed.
 
   gateway:
     container_name: gateway
+    build: spring-cloud/gateway
     environment:
       - SPRING_PROFILES_ACTIVE=docker
-    build: spring-cloud/gateway
     mem_limit: 512m
     ports:
       - "8443:8443"
-    depends_on:
-      auth-server:
-        condition: service_healthy
+
+  config-server:
+    build: spring-cloud/config-server
+    mem_limit: 512m
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker,native # native is added to signal to the config server that the config repository is based on local files.
+      - ENCRYPT_KEY=${CONFIG_SERVER_ENCRYPT_KEY} # used to specify the symmetric encryption key that will be used by the config server to encrypt and decrypt sensitive configuration information.
+    volumes:
+      - $PWD/config-repo:/config-repo # volume declaration will make the config-repo folder accessible in the Docker container at /config-repo
