--- a/microservices/product-composite-service/src/main/resources/application.yml
+++ b/microservices/product-composite-service/src/main/resources/application.yml
@@ -1,86 +1,19 @@
-server.port: 7000
-server.error.include-message: always
+spring.config.import: "configserver:"
 
-spring.application.name: product-composite
-
-app.eureka-server: localhost
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://${app.eureka-server}:8761/eureka/
-    initialInstanceInfoReplicationIntervalSeconds: 5
-    registryFetchIntervalSeconds: 5
-  instance:
-    leaseRenewalIntervalInSeconds: 5
-    leaseExpirationDurationInSeconds: 5
-
-spring.cloud.stream:
-  defaultBinder: rabbit
-  default.contentType: application/json
-  bindings:
-    products-out-0:
-      destination: products
-      producer: # When using Spring Cloud Stream with Kafka, events are retained in the topics, even after consumers have processed them. However, when using Spring Cloud Stream with RabbitMQ, the events are removed after they have been processed successfully.
-        required-groups: auditGroup # To be able to see what events have been published on each topic, Spring Cloud Stream is configured to save published events in a separate consumer group, auditGroup, per topic. For the products topic, the configuration looks like this:
-    recommendations-out-0:
-      destination: recommendations
-      producer:
-        required-groups: auditGroup
-    reviews-out-0:
-      destination: reviews
-      producer:
-        required-groups: auditGroup
-
-spring.cloud.stream.kafka.binder:
-  brokers: 127.0.0.1
-  defaultBrokerPort: 9092
-
-spring.rabbitmq:
-  host: 127.0.0.1
-  port: 5672
-  username: guest
-  password: guest
-
-logging:
-  level:
-    root: INFO
-    com.mkurt: DEBUG
-
-management.endpoint.health.show-details: "ALWAYS" # actuator
-management.endpoints.web.exposure.include: "*" # actuator
+spring:
+  application.name: product-composite
+  cloud.config:
+    failFast: true
+    retry:
+      initialInterval: 3000
+      multiplier: 1.3 # The wait time for subsequent retries will increase by a factor of 1.3
+      maxInterval: 10000
+      maxAttempts: 20
+    uri: http://localhost:8888
+    username: ${CONFIG_SERVER_USR}
+    password: ${CONFIG_SERVER_PWD}
 
 ---
 spring.config.activate.on-profile: docker
 
-server.port: 8080
-
-app.eureka-server: eureka
-
-spring.rabbitmq.host: rabbitmq
-spring.cloud.stream.kafka.binder.brokers: kafka
-
----
-spring.config.activate.on-profile: streaming_partitioned
-
-# This configuration means that the key will be taken from the message header with the name partitionKey
-# and that two partitions will be used.
-spring.cloud.stream.bindings.products-out-0.producer:
-  partition-key-expression: headers['partitionKey']
-  partition-count: 2
-
-spring.cloud.stream.bindings.recommendations-out-0.producer:
-  partition-key-expression: headers['partitionKey']
-  partition-count: 2
-
-spring.cloud.stream.bindings.reviews-out-0.producer:
-  partition-key-expression: headers['partitionKey']
-  partition-count: 2
-
----
-spring.config.activate.on-profile: kafka
-
-management.health.rabbit.enabled: false
-spring.cloud.stream.defaultBinder: kafka
-spring.kafka.bootstrap-servers: kafka:9092
-spring.cloud.stream.kafka.binder.replication-factor: 1
+spring.cloud.config.uri: http://config-server:8888
