--- a/microservices/product-service/src/main/resources/application.yml
+++ b/microservices/product-service/src/main/resources/application.yml
@@ -1,104 +1,19 @@
-server.port: 7001
-server.error.include-message: always
+spring.config.import: "configserver:"
 
-spring.application.name: product
+spring:
+  application.name: product
+  cloud.config:
+    failFast: true
+    retry:
+      initialInterval: 3000
+      multiplier: 1.3 # The wait time for subsequent retries will increase by a factor of 1.3
+      maxInterval: 10000 # The maximum wait time between connection attempts will be 10 seconds
+      maxAttempts: 20 # Try to reconnect to the config server during startup up to 20 times, after that its startup will fail
+    uri: http://localhost:8888
+    username: ${CONFIG_SERVER_USR}
+    password: ${CONFIG_SERVER_PWD}
 
-app:
-  eureka-username: u
-  eureka-password: p
-  eureka-server: localhost
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: "http://${app.eureka-username}:${app.eureka-password}@${app.eureka-server}:8761/eureka/"
-    initialInstanceInfoReplicationIntervalSeconds: 5
-    registryFetchIntervalSeconds: 5
-  instance:
-    leaseRenewalIntervalInSeconds: 5
-    leaseExpirationDurationInSeconds: 5
-
-spring.data.mongodb:
-  host: localhost
-  port: 27017
-  database: product-db
-
-spring.cloud.function.definition: messageProcessor
-
-spring.cloud.stream:
-  defaultBinder: rabbit
-  default.contentType: application/json
-  bindings.messageProcessor-in-0:
-    destination: products
-    group: productsGroup
-
-spring.cloud.stream.bindings.messageProcessor-in-0.consumer:
-  maxAttempts: 3 # Spring Cloud Stream should perform 3 retries before placing a message on the dead-letter queue.
-  backOffInitialInterval: 500 # The first retry will be attempted after 500 ms and the two other attempts after 1000 ms.
-  backOffMaxInterval: 1000
-  backOffMultiplier: 2.0
-
-spring.cloud.stream.rabbit.bindings.messageProcessor-in-0.consumer:
-  autoBindDlq: true
-  republishToDlq: true
-
-spring.cloud.stream.kafka.bindings.messageProcessor-in-0.consumer:
-  enableDlq: true
-
-spring.cloud.stream.kafka.binder:
-  brokers: 127.0.0.1
-  defaultBrokerPort: 9092
-
-spring.rabbitmq:
-  host: 127.0.0.1
-  port: 5672
-  username: guest
-  password: guest
-
-
-logging:
-  level:
-    root: INFO
-    com.mkurt: DEBUG
-    org.springframework.data.mongodb.core.MongoTemplate: DEBUG # allow us to see which MongoDB statements are executed in the log.
-
-management.endpoint.health.show-details: "ALWAYS"
-management.endpoints.web.exposure.include: "*"
 ---
 spring.config.activate.on-profile: docker
 
-server.port: 8080
-
-app.eureka-server: eureka
-
-# eureka.client.serviceUrl.defaultZone: http://${app.eureka-server}:8761/eureka/
-
-# When running inside Docker using the Spring profile, docker, the database is expected to be reachable on mongodb:27017.
-spring.data.mongodb.host: mongodb
-spring.rabbitmq.host: rabbitmq
-spring.cloud.stream.kafka.binder.brokers: kafka
-
----
-spring.config.activate.on-profile: streaming_partitioned
-
-spring.cloud.stream.bindings.messageProcessor-in-0.consumer:
-  partitioned: true
-  instanceCount: 2
-
----
-spring.config.activate.on-profile: streaming_instance_0
-
-spring.cloud.stream.bindings.messageProcessor-in-0.consumer.instanceIndex: 0
-
----
-spring.config.activate.on-profile: streaming_instance_1
-
-spring.cloud.stream.bindings.messageProcessor-in-0.consumer.instanceIndex: 1
-
----
-spring.config.activate.on-profile: kafka
-
-management.health.rabbit.enabled: false
-spring.cloud.stream.defaultBinder: kafka
-spring.kafka.bootstrap-servers: kafka:9092
-spring.cloud.stream.kafka.binder.replication-factor: 1
+spring.cloud.config.uri: http://config-server:8888
