Add configuration resilience mechanisms. closes #66

--- a/config-repo/product-composite.yml
+++ b/config-repo/product-composite.yml
@@ -17,6 +17,36 @@ spring.cloud.stream:
       producer:
         required-groups: auditGroup
 
+############################ RESILIENCE4J ############################
+resilience4j.timelimiter:
+  instances:
+    product:
+      timeoutDuration: 2s
+
+resilience4j.retry:
+  instances:
+    product:
+      maxAttempts: 3
+      waitDuration: 1000
+      retryExceptions:
+        - org.springframework.web.reactive.function.client.WebClientResponseException$InternalServerError
+
+management.health.circuitbreakers.enabled: true
+
+resilience4j.circuitbreaker:
+  instances:
+    product:
+      allowHealthIndicatorToFail: false
+      registerHealthIndicator: true
+      slidingWindowType: COUNT_BASED
+      slidingWindowSize: 5
+      failureRateThreshold: 50
+      waitDurationInOpenState: 10000
+      permittedNumberOfCallsInHalfOpenState: 3
+      automaticTransitionFromOpenToHalfOpenEnabled: true
+      ignoreExceptions:
+        - com.mkurt.api.exception.InvalidInputException
+        - com.mkurt.api.exception.NotFoundException
 
 logging:
   level:
