--- a/docker-compose-partitions.yml
+++ b/docker-compose-partitions.yml
@@ -153,3 +153,15 @@ services:
       - ENCRYPT_KEY=${CONFIG_SERVER_ENCRYPT_KEY}
     volumes:
       - $PWD/config-repo:/config-repo
+
+  zipkin:
+    image: openzipkin/zipkin:2.23.2
+    mem_limit: 1024m
+    environment:
+      - RABBIT_ADDRESSES=rabbitmq
+      - STORAGE_TYPE=mem
+    ports:
+      - 9411:9411
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
